11712406-project2/test/test_11712406_0.spl
int foo()
{
  int a = 10;
  return a;
}

int test_2_o01(int a, int b)
{
  int c;
  c = foo();
  if (b > 0)
  {
    int a = c + 3;
    3 = b - a;
  }
  a = a[5] + b;
  return a;
}